reduce references size

--- a/a-propos.html
+++ b/a-propos.html
@@ -15,7 +15,7 @@
     <div id="a-propos">
 
         <p>
-            <i>For the english version, click <a href="javascript:showDiv('about-me')"">here</a>.</i>
+            <i>For the english version, click <a href="about-me.html">here</a>.</i>
         </p>
 
         <h2>A propos de moi</h2>
@@ -46,7 +46,7 @@
             Langage Naturel (NLP) et l'Économétrie pour analyser et quantifier
             les répercussions économiques des sanctions. Ceci est détaillé dans
             la section
-            <a href="javascript:showDiv('research')">Recherche</a>.
+            <a href="research.html">Recherche</a>.
         </p>
 
         <p>
@@ -57,7 +57,7 @@
             l'estimation de les modèles de gravité, le traitement des données en
             R et la visualisation des données à l'aide de Shiny. Pour plus de
             détails, voir la section
-            <a href="javascript:showDiv('open-source')">Open-Source</a>.
+            <a href="open-source.html">Open-Source</a>.
         </p>
 
         <p>
