--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             this combining Natural Language Processing (NLP) and Econometrics to
             analyze and quantify the economic repercussions of sanctions. This
             is detailed in the 
-            <a href="javascript:showDiv('research')">Research</a> section.
+            <a href="research.html">Research</a> section.
         </p>
 
         <p>
@@ -67,12 +67,12 @@
             profile showcases my open-source projects, predominantly focused on
             gravity estimation, data wrangling in R, and data visualization
             using Shiny. More details can be found in the
-            <a href="javascript:showDiv('open-source')">Open Source</a> section.
+            <a href="open-source.html">Open Source</a> section.
         </p>
 
         <p>
             Additionally, I maintain a blog (<a href="https://pacha.dev/blog">
-                pacha.dev/blog</a>), where I post various notes and tutorials.
+            pacha.dev/blog</a>), where I post various notes and tutorials.
             Some highlights include "Creating LaTeX Figures with Inkscape", "A
             Crash Course on PostgreSQL for R Users", and "A Step-by-Step Guide
             to Write an R Package that Uses C++ Code (Ubuntu)". These posts
