add redatam pkg

--- a/open-source.html
+++ b/open-source.html
@@ -21,6 +21,8 @@
         <ul>
             <li><a href="https://github.com/ropensci/tabulapdf">TabulaPDF</a>: R bindings to the
                 Tabula Java library for PDF tables extraction.</li>
+            <li><a href="https://github.com/pachadotdev/open-redatam">Redatam</a>: Read REDATAM binary data directly
+                in R. This is similar to the Haven package for SPSS/Stata datasets but for REDATAM formats.</li>
             <li><a href="https://github.com/pachadotdev/cpp11tesseract">Cpp11tesseract</a>: R bindings to the
                 Tesseract C++ library for optical character recognition (OCR).</li>
             <li><a href="https://github.com/pachadotdev/freedomhouse">Freedomhouse</a>: A tidy version of Freedom House
