update OSS and Rep sections

--- a/open-source.html
+++ b/open-source.html
@@ -16,6 +16,14 @@
 
         <h2>Open source</h2>
 
+        <h3 id="selected-r-packages">C++ software</h3>
+
+        <ul>
+            <li><a href="https://github.com/pachadotdev/open-redatam">Open REDATAM</a>: Open Redatam is an open source
+                software for extracting raw information from REDATAM databases. It was created to recover information
+                of REDATAM databases for statistical analysis using standard tools such as SPSS, STATA, R, etc.</li>
+        </ul>
+
         <h3 id="selected-r-packages">Selected R packages</h3>
 
         <ul>
@@ -35,6 +43,18 @@
             <li><a href="https://github.com/pachadotdev/cpp11eigen">Cpp11eigen</a>: Provides function declarations
                 and inline function definitions that facilitate communication between R and the Eigen C++ library for
                 linear algebra and scientific computing.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11janitor">Cpp11janitor</a>: Provides function declarations and
+                inline function definitions that facilitate cleaning strings in C++ code before passing them to R.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11tesseract">Cpp11tesseract</a>: Bindings to Tesseract, a
+                powerful optical character recognition (OCR) engine that supports over 100 languages. The engine is
+                highly configurable in order to tune the detection algorithms and obtain the best possible results.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11poppler">Cpp11poppler</a>: Bindings to Poppler, a tool
+                for extracting text, fonts, attachments and metadata from a PDF file. It also supports high quality
+                rendering of PDF documents into PNG, JPEG, TIFF format, or into raw bitmap vectors for posterior
+                processing.</li>
+            <li><a href="https://github.com/pachadotdev/cpp11qpdf">Cpp11qpdf</a>: Bindings to Qpdf, an open-source
+                PDF rendering library that allows to conduct content-preserving transformations of PDF files such as
+                split, combine, and compress PDF files.</li>
             <li><a href="https://github.com/pachadotdev/desta">DESTA (R version)</a>: The Design of Trade Agreements
                 Database.</li>
             <li><a href="https://github.com/pachadotdev/usitcgravity">USITC Gravity</a>: Database Adapted From the
@@ -49,6 +69,8 @@
                 wrapper and utility program.</li>
             <li><a href="https://github.com/rich-iannone/pointblank">Pointblank</a>: Data validation and organization of
                 metadata for local and remote tables.</li>
+            <li><a href="https://github.com/pachadotdev/open-redatam">Redatam</a>: Import REDATAM formats into R via the
+                Open REDATAM C++ library.</li>
         </ul>
 
         <h3 id="cran">CRAN</h3>
