--- a/replication.html
+++ b/replication.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Class Notes - Mauricio "Pachá" Vargas Sepúlveda</title>
+    <title>Replication - Mauricio "Pachá" Vargas Sepúlveda</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="functions.js"></script>
 </head>
@@ -15,17 +15,23 @@
     <div id="replication">
         <h2>Replication</h2>
 
-        <p>I tend to replicate all the articles and books I read. This usually involves redoing all the math when
-            something is not clear (i.e., not clear to me) or trying to recreate tables with R or Python.</p>
+        <p>I tend to replicate all the articles and books I read. I usually do not understand everything immediately,
+            and then I redo all the math or recreate plots/tables with R or Python step-by-step. This is more or less
+            an application of the quote by Paul Halmos: <i>"Don't just read it; fight it! Ask your own questions, look
+            for your own examples, discover your own proofs. Is the hypothesis necessary? Is the converse true? What
+            happens in the classical special case? What about the degenerate cases? Where does the proof use the
+            hypothesis?"</i>
+        </p>
 
         <center>
             <figure>
-                <img src="willitreplicate.jpg" alt="Will it replicate?" style="width: 50%;">
-                <figcaption>Will it replicate? as in 'Will it Blend?'</figcaption>
+                <img src="halmos.jpg" alt="Don't just read it; fight it" style="width: 50%;">
             </figure>
         </center>
 
         <p>Here are some of the articles and books I have replicated:</p>
+
+        <!-- Add Eaton Kortum model -->
 
         <p>
             Feenstra, Robert C. 2004. <i>Advanced International Trade: Theory and Evidence</i>. Princeton, N.J:
@@ -34,13 +40,18 @@
         </p>
         <p>
             Melitz, Marc J. 2003. "The Impact of Trade on Intra-Industry Reallocations and Aggregate Industry
-            Productivity." <i>Econometrica</i> 71 (6): 1695–1725. https://doi.org/10.1111/1468-0262.00467.
+            Productivity." <i>Econometrica</i> 71 (6): 1695-1725. https://doi.org/10.1111/1468-0262.00467.
             <a href="https://pacha.dev/trade-notes/melitz/retracing.pdf">Math step by step</a>.
         </p>
 
         <p>
+            Peters, Margaret E. <i>Trading barriers: immigration and the remaking of globalization</i>. Princeton
+            University Press, 2017. <a href="https://pacha.dev/trading-barriers-in-r/">Tables replication with R</a>.
+        </p>
+
+        <p>
             Santos Silva, Joao, and Silvana Tenreyro. 2006. "The Log of Gravity." <i>The Review of Economics and
-                Statistics</i> 88 (4): 641–58. https://doi.org/10.1162/rest.88.4.641. <a
+                Statistics</i> 88 (4): 641-58. https://doi.org/10.1162/rest.88.4.641. <a
                 href="https://pacha.dev/log-of-gravity/replication.pdf">Tables replication witn R</a>.
         </p>
 
