--- a/a-propos.html
+++ b/a-propos.html
@@ -15,7 +15,7 @@
     <div id="a-propos">
 
         <p>
-            <i>For the english version, click <a href="about-me.html">here</a>.</i>
+            <i>For the english version, click <a href="index.html">here</a>.</i>
         </p>
 
         <h2>A propos de moi</h2>
