--- a/open-source.html
+++ b/open-source.html
@@ -43,7 +43,7 @@
             <li><a href="https://github.com/pachadotdev/cpp11eigen">Cpp11eigen</a>: Provides function declarations
                 and inline function definitions that facilitate communication between R and the Eigen C++ library for
                 linear algebra and scientific computing.</li>
-            <li><a href="https://github.com/pachadotdev/cpp11janitor">Cpp11janitor</a>: Provides function declarations and
+            <li><a href="https://github.com/pachadotdev/pudu">Pudu</a>: Provides function declarations and
                 inline function definitions that facilitate cleaning strings in C++ code before passing them to R.</li>
             <li><a href="https://github.com/pachadotdev/cpp11tesseract">Cpp11tesseract</a>: Bindings to Tesseract, a
                 powerful optical character recognition (OCR) engine that supports over 100 languages. The engine is
