--- a/research.html
+++ b/research.html
@@ -41,6 +41,13 @@
         <h3>Published Articles</h3>
 
         <p>
+            Vargas Sepúlveda, Mauricio and Barkai, Lital. 2025. "The REDATAM format and its
+            challenges for data access and information creation in public policy." <i>Data & Policy</i>
+            7 (2025): e18.
+            <a href="https://dx.doi.org/10.1017/dap.2025.4">https://dx.doi.org/10.1017/dap.2025.4</a>.
+        </p>
+
+        <p>
             Vargas Sepúlveda, Mauricio. 2020. "Economiccomplexity: Computational Methods
             for Economic Complexity." <i>Journal of Open Source Software</i> 5
             (46): 1866.
