--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
         <p>
             Vargas Sepúlveda, Mauricio and Barkai, Lital. 2025. "The REDATAM format and its
             challenges for data access and information creation in public policy." <i>Data & Policy</i>
-            7 (2025): e18.
+            7 (January): e18.
             <a href="https://dx.doi.org/10.1017/dap.2025.4">https://dx.doi.org/10.1017/dap.2025.4</a>.
         </p>
 
