cpp11armadillo article

--- a/research.html
+++ b/research.html
@@ -41,6 +41,12 @@
         <h3>Published Articles</h3>
 
         <p>
+            Vargas Sepúlveda, Mauricio and Schneider Malamud, Jonathan. 2025. "cpp11armadillo: An R package to use the Armadillo C++ library." <i>SoftwareX</i>
+            30 (May): 102087.
+            <a href="https://doi.org/10.1016/j.softx.2025.102087">https://doi.org/10.1016/j.softx.2025.102087</a>.
+        </p>
+
+        <p>
             Vargas Sepúlveda, Mauricio and Barkai, Lital. 2025. "The REDATAM format and its
             challenges for data access and information creation in public policy." <i>Data & Policy</i>
             7 (January): e18.
