--- a/research.html
+++ b/research.html
@@ -147,16 +147,21 @@
         </p>
 
         <p style="margin-left: 2em;">Cited by</p>
+        
+        <p style="margin-left: 2em;">
+            Delgado-Martínez, Edinson. 2024. "The Impact of the Pacific Alliance on Trade Creation and Trade Diversion in the COVID-19 Period: A Robust Econometric Analysis"
+            <i>Economies</i> 12 (12): 334. <a href="https://doi.org/10.3390/economies12120334">https://doi.org/10.3390/economies12120334</a>.
+        </p>
 
         <p style="margin-left: 2em;">
-            Lenormand, Maxime. "TDLM: An R package for a systematic comparison
+            Lenormand, Maxime. 2023. "TDLM: An R package for a systematic comparison
             of trip distribution laws and models." <i>Journal of Open Source
-            Software</i> 8, no. 88 (2023): 5434.
+            Software</i> 8, no. 88: 5434.
             <a href="https://doi.org/10.21105/joss.05434">https://doi.org/10.21105/joss.05434</a>.
         </p>
 
         <p style="margin-left: 2em;">
-            Oshan, Taylor. "12. Spatial interaction modeling." <i>Handbook of
+            Oshan, Taylor. "Spatial interaction modeling." <i>Handbook of
             spatial analysis in the social sciences</i> (2022): 208.
             <a href="https://www.e-elgar.com/shop/gbp/handbook-of-spatial-analysis-in-the-social-sciences-9781789903935.html">https://www.e-elgar.com/shop/gbp/handbook-of-spatial-analysis-in-the-social-sciences-9781789903935.html</a>.
         </p>
@@ -231,16 +236,15 @@
         <h4>Master in Political Science</h4>
 
         <p>
-            Vargas Sepúlveda, Mauricio. "NAFTA is the Worst Trade Deal in the History
-            of Trade Deals, Maybe Ever." University of Toronto, 2023.
+            Vargas Sepúlveda, Mauricio. 2023. "NAFTA is the Worst Trade Deal in the History
+            of Trade Deals, Maybe Ever." University of Toronto, Toronto.
         </p>
 
         <h4>Master in Statistics</h4>
 
         <p>
-            Vargas Sepúlveda, Mauricio. "Gravity Modelling Into R: Strengthening
-            Analytical Capacity of ESCAP Member States." UN ESCAP and P. U.
-            Católica de Chile, 2021.
+            Vargas Sepúlveda, Mauricio. 2021. "Gravity Modelling Into R: Strengthening
+            Analytical Capacity of ESCAP Member States." UN ESCAP and Pontificia Universidad Católica de Chile, Santiago, Chile.
         </p>
 
         <h3>Research Statement</h3>
@@ -315,7 +319,7 @@
         <p>
             Burgard, Jan Pablo, Joshua Kunst, Mauricio Vargas Sepúlveda, and
             Anna Lenna Woelwer. 2018. "Gravity: Estimation Methods for Gravity
-            Models in R." <em>Journal of Open Source Software</em> 31 (3):
+            Models in R." <em>Journal of Open Source Software</em> 3 (31):
             1038.
             <a href="https://doi.org/10.21105/joss.01038">https://doi.org/10.21105/joss.01038</a>.
         </p>
@@ -335,7 +339,7 @@
         <p>
             Felbermayr, Gabriel, Aleksandra Kirilakha, Constantinos Syropoulos,
             Erdal Yalcin, and Yoto V. Yotov. 2020. "The Global Sanctions Data
-            Base." <em>European Economic Review</em> 129: 103561-61.
+            Base." <em>European Economic Review</em> 129: 103561.
             <a href="https://doi.org/10.1016/j.euroecorev.2020.103561">https://doi.org/10.1016/j.euroecorev.2020.103561</a>.
         </p>
 
