add correlation article

--- a/research.html
+++ b/research.html
@@ -41,8 +41,14 @@
         <h3>Published Articles</h3>
 
         <p>
-            Vargas Sepúlveda, Mauricio and Schneider Malamud, Jonathan. 2025. "cpp11armadillo: An R package to use the Armadillo C++ library." <i>SoftwareX</i>
-            30 (May): 102087.
+            Sepulveda, Mauricio Vargas. 2025. "Kendallknight: An R Package for Efficient Implementation
+            of Kendall's Correlation Coefficient Computation." <i>PLOS ONE</i> 20 (6): e0326090.
+            <a href="https://doi.org/10.1371/journal.pone.0326090">https://doi.org/10.1371/journal.pone.0326090</a>.
+        </p>
+
+        <p>
+            Vargas Sepúlveda, Mauricio and Schneider Malamud, Jonathan. 2025. "cpp11armadillo:
+            An R package to use the Armadillo C++ library." <i>SoftwareX</i> 30 (May): 102087.
             <a href="https://doi.org/10.1016/j.softx.2025.102087">https://doi.org/10.1016/j.softx.2025.102087</a>.
         </p>
 
