fix artticle order

--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
         <h3>Published Articles</h3>
 
         <p>
-            Sepulveda, Mauricio Vargas. 2025. "Kendallknight: An R Package for Efficient Implementation
+            Vargas Sepúlveda, Mauricio. 2025. "Kendallknight: An R Package for Efficient Implementation
             of Kendall's Correlation Coefficient Computation." <i>PLOS ONE</i> 20 (6): e0326090.
             <a href="https://doi.org/10.1371/journal.pone.0326090">https://doi.org/10.1371/journal.pone.0326090</a>.
         </p>
