--- a/research.html
+++ b/research.html
@@ -24,11 +24,6 @@
         </p>
 
         <p>
-            Canadian Politics: Advocacy Coalitions, Federal Hubs, CAN-USA-MEX
-            Transnational Policymaking.
-        </p>
-
-        <p>
             Public Policy: Public-Private Trade Programs, Exports
             Diversification and Sustainability, Labour Reconversion.
         </p>
@@ -205,6 +200,14 @@
             SpringerBriefs in Economics. Cham: Springer International
             Publishing.
             <a href="https://doi.org/10.1007/978-3-030-34529-7_4">https://doi.org/10.1007/978-3-030-34529-7_4</a>.
+        </p>
+
+        <h3>Workshops & Presentations</h3>
+        
+        <p>
+            Vargas Sepulveda, Mauricio. 2025."“Capybara: Efficient Estimation of GLMs with Large Fixed Effect."
+            Second Annual Workshop on Sanctions, Austrian Institute of Economic Research. Vienna, Austria.
+            <i>Currently under review at PLOS ONE</i>.
         </p>
 
         <h3>Pre-Prints</h3>
