--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     My research primarily focuses on the political dynamics of trade
                     agreements and sanctions. Due to this interest, I am a Fellow at the
                     <a href="https://munkschool.utoronto.ca/">Munk School of Global
-                        Affairs and Public Policy</a>.
+                        Affairs and Public Policy</a>. My research covers a significant
+                    Open Source component, which led me to contribute as a Junior Editor
+                    for the <a href="https://joss.theoj.org/">Journal of Open Source Software</a>.
                 </p>
         
                 <p>
