--- a/books.html
+++ b/books.html
@@ -17,6 +17,11 @@
         <h2>Books</h2>
 
         <p>
+            <i>(In Progress)</i> Vargas Sepúlveda, M. <i>C++ for R Users</i>. E-Book, 2024.
+            <a href="https://cpp4r.org/">https://cpp4r.org/</a>.
+        </p>
+
+        <p>
             Vargas Sepúlveda, M. <i>The Hitchhiker's Guide to Econometrics</i>. 1st ed. Victoria: Leanpub, 2023.
             <a href="https://leanpub.com/econometrics-guide">https://leanpub.com/econometrics-guide</a>.
         </p>
