--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 </p>
 
                 <p>
-                    Additionally, I maintain a blog (<a href="https://pacha.dev/blog">
-                    pacha.dev/blog</a>), where I post various notes and tutorials.
+                    Additionally, I maintain a blog (<a href="https://pacha.dev/blog">pacha.dev/blog</a>),
+                    where I post various notes and tutorials.
                     Some highlights include "Creating LaTeX Figures with Inkscape", "A
                     Crash Course on PostgreSQL for R Users", and "A Step-by-Step Guide
                     to Write an R Package that Uses C++ Code (Ubuntu)". These posts
